<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="even.carpool.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:layout_gravity="end"
                    android:text="＊星號為必填"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_account"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_password"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_name"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/re_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="＊性別："
                        android:textSize="18sp"
                        android:paddingLeft="4dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:layout_centerVertical="true"/>
                    <Spinner
                        android:id="@+id/sp_re_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/re_sex">
                    </Spinner>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/department"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="＊科系："
                        android:textSize="18sp"
                        android:paddingLeft="4dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:layout_centerVertical="true"/>
                    <Spinner
                        android:id="@+id/sp_re_depart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/department">
                    </Spinner>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/re_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="＊年級："
                        android:textSize="18sp"
                        android:paddingLeft="4dp"
                        android:paddingTop="4dp"
                        android:layout_centerVertical="true"/>
                    <Spinner
                        android:id="@+id/sp_re_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/re_year">
                    </Spinner>
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_email"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_phone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="phone"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/okbtn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="確認送出"
                    android:textStyle="bold"
                    android:layout_gravity="end" />
                <TextView
                    android:id="@+id/correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:layout_gravity="end"
                    android:text=""/>



            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</RelativeLayout>
